# havilah

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_migration.py  pyproject.toml  railway.json  requirements.txt  test_db.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_whatsapp_tables.py  003_hermes_runs_and_user_prefs.py
backend/: database.py  main.py
backend/api/: __init__.py  agents.py  analytics.py  approvals.py  auth.py  auth_routes.py  briefings.py  contacts.py  content.py  deps.py  events.py  hermes.py  knowledge.py  meetings.py  memory.py  middleware.py  notifications.py  organizations.py  permissions.py  projects.py  research.py  risk.py  search.py  tasks.py  telegram.py  user_preferences.py  whatsapp.py  workflows.py
backend/commands/: approve_request.py  capture_memory.py  complete_task.py  create_contact.py  create_project.py  create_task.py  execute_action.py  generate_approval_briefing.py  generate_approval_timeline.py  generate_contact_briefing.py  generate_executive_briefing.py  generate_project_briefing.py  generate_project_dashboard.py  generate_project_timeline.py  generate_task_briefing.py  generate_task_timeline.py  link_memory.py  link_project_approval.py  link_task_approval.py  recalculate_project_health.py  recall_memory.py  reinforce_memory.pytouch  request_approval.py  start_task.py
backend/config/: settings.py
backend/core/: __init__.py  logging_config.py  monitoring.py  security.py
backend/events/: __init__.py  approval_events.py  briefing_events.py  memory_events.py  project_events.py  project_timeline_events.py  task_events.py  timeline_events.py
docs/: APPROVAL_CONTEXT.md  ARCHITECTURE.md  MEMORY_CONTEXT.md  RAILWAY_DEPLOY.md  VERCEL_DEPLOY.md  WHATSAPP_SETUP.md
frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
scripts/: push_to_github.sh  railway_provision_whatsapp.py  test_hermes.sh  vercel_deploy.py  whatsapp_webhook_test.py
tests/: conftest.py  test_approvals.py  test_auth.py  test_health.py  test_services.py  test_whatsapp.py
(+103 files in other folders)
